Apache Server Config Update

--- a/wsgi/swing_cms.apache2.conf
+++ b/wsgi/swing_cms.apache2.conf
@@ -24,19 +24,19 @@
 #
 # If no virtual environment in use, comment both variables with: #
 #
-WSGIPythonHome /var/www/rxdbit.com/contact-os/venv/
-WSGIPythonPath /var/www/rxdbit.com/contact-os/
-WSGIDaemonProcess contact-os
-WSGIProcessGroup contact-os
+WSGIPythonHome /var/www/smswhapp.rxdbit.com/smswhapp/venv/
+WSGIPythonPath /var/www/smswhapp.rxdbit.com/smswhapp/
+WSGIDaemonProcess smswhapp
+WSGIProcessGroup smswhapp
 WSGIApplicationGroup %{GLOBAL}
 
 Listen 80
 <VirtualHost *:80>
-                ServerName rxdbit.com
-                ServerAlias www.rxdbit.com
+                ServerName smswhapp.rxdbit.com
+                ServerAlias smswhapp.rxdbit.com
                 ServerAdmin info@rxdbit.com
-                WSGIScriptAlias / /var/www/rxdbit.com/contact-os/swing_cms.wsgi
-                <Directory /var/www/rxdbit.com/contact-os/>
+                WSGIScriptAlias / /var/www/rxdbit.com/smswhapp/swing_cms.wsgi
+                <Directory /var/www/smswhapp.rxdbit.com/smswhapp/>
                         WSGIScriptReloading On
                         Require all granted
                 </Directory>
@@ -47,11 +47,11 @@ Listen 80
 
 Listen 443
 <VirtualHost *:443>
-                ServerName rxdbit.com
-                ServerAlias www.rxdbit.com
+                ServerName smswhapp.rxdbit.com
+                ServerAlias smswhapp.rxdbit.com
                 ServerAdmin info@rxdbit.com
-                WSGIScriptAlias / /var/www/rxdbit.com/contact-os/swing_cms.wsgi
-                <Directory /var/www/rxdbit.com/contact-os/>
+                WSGIScriptAlias / /var/www/smswhapp.rxdbit.com/smswhapp/swing_cms.wsgi
+                <Directory /var/www/smswhapp.rxdbit.com/smswhapp/>
                         WSGIScriptReloading On
                         Require all granted
                 </Directory>
