Apache fix for startup

--- a/wsgi/swing_cms.apache2.conf
+++ b/wsgi/swing_cms.apache2.conf
@@ -3,7 +3,7 @@
 # 1---
 # Modify as needed and copy this file to:
 #
-# 		/etc/apache2/sites-available/
+# 		/etc/apache2/sites-available/smswhapp.conf
 #
 # or your Apache HTTPD 'sites-available' directory.
 # 2---
@@ -13,7 +13,7 @@
 #		sudo a2dissite 000-default
 #
 # 	*Enable Swing website:
-# 		sudo a2ensite swing_cms
+# 		sudo a2ensite smswhapp
 #3--
 # When utilizing python virtual environments, configure
 # both of the following variables:
@@ -30,27 +30,12 @@ WSGIDaemonProcess smswhapp
 WSGIProcessGroup smswhapp
 WSGIApplicationGroup %{GLOBAL}
 
-Listen 80
-<VirtualHost *:80>
+Listen 8080
+<VirtualHost *:8080>
                 ServerName smswhapp.rxdbit.com
                 ServerAlias smswhapp.rxdbit.com
                 ServerAdmin info@rxdbit.com
                 WSGIScriptAlias / /var/www/rxdbit.com/smswhapp/swing_cms.wsgi
-                <Directory /var/www/smswhapp.rxdbit.com/smswhapp/>
-                        WSGIScriptReloading On
-                        Require all granted
-                </Directory>
-                ErrorLog ${APACHE_LOG_DIR}/error.log
-                LogLevel warn
-                CustomLog ${APACHE_LOG_DIR}/access.log combined
-</VirtualHost>
-
-Listen 443
-<VirtualHost *:443>
-                ServerName smswhapp.rxdbit.com
-                ServerAlias smswhapp.rxdbit.com
-                ServerAdmin info@rxdbit.com
-                WSGIScriptAlias / /var/www/smswhapp.rxdbit.com/smswhapp/swing_cms.wsgi
                 <Directory /var/www/smswhapp.rxdbit.com/smswhapp/>
                         WSGIScriptReloading On
                         Require all granted
